fix: arruma overflow da imagem

--- a/static/css/sobre-nos.css
+++ b/static/css/sobre-nos.css
@@ -7,6 +7,7 @@
 }
 
 .about-us-illustration {
+  width: 100%;
   float: left;
 }
 
